--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/carousel/logo.png">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
